staging/gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: gateway
  namespace: staging
spec:
  rules:
  - host: staging.devheaven.nl
    http:
      paths:
      - path: /api\/(tasks|columns|boards)\/?(.+)
        backend:
          serviceName: task-management-service
          servicePort: 80
      - path: /api\/(projects|milestones)\/?(.+)
        backend:
          serviceName: project-management-service
          servicePort: 80
      - path: /?(.*)
        backend:
          serviceName: frontend-service
          servicePort: 80
